# content-signal-engine

./: .gitignore  README.md  pyproject.toml
data/: pattern_bank.json  seed_results.json  source_seeds.json  watchlist.json
docs/: product-shape.md
docs/examples/: generated-scripts-20260609-132626.md  sample-source-reel-report.md
scripts/: run_weekly_report.sh
src/content_signal_engine/: __init__.py  analyse.py  cli.py  comments.py  discover.py  models.py  notion_direct.py  notion_export.py  report.py  schedule.py  scrape.py  scripts.py  storage.py
tests/: test_analyse.py  test_comments.py  test_discover.py  test_notion_direct.py  test_notion_export.py  test_report.py  test_scripts.py
