[project]
name = "content-signal-engine"
version = "0.1.0"
description = "Local-first content intelligence engine for decoding public social content signals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
]

[project.scripts]
cse = "content_signal_engine.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
